--- a/workshop32-revision/src/app/app.component.html
+++ b/workshop32-revision/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-input (taskData)="newTaskData($event)" [editTaskData]="selectedTask" (editedTask)="editedTaskData($event)"></app-input>
 
-<app-display [tasks]="tasks" (onEditTask)="editingTask($event)"></app-display>
+<app-display [tasks]="tasks" (onEditTask)="editingTask($event)" (onRemoveTask)="removeTask($event)"></app-display>
