--- a/workshop32-revision/src/app/components/display/display.component.html
+++ b/workshop32-revision/src/app/components/display/display.component.html
@@ -4,7 +4,7 @@
 
 
 <div class="tasks-container">
-<div *ngIf="tasks">
+<div>
 
     <mat-card *ngFor="let task of tasks; let idx = index" class="task-card">
         <mat-card-header>
@@ -13,7 +13,7 @@
                 {{task.description}}
             </mat-card-title>
             <mat-card-subtitle>
-                {{task.priority}}  {{task._id}}
+                {{task.priority}}
             </mat-card-subtitle>
 
             <mat-card-subtitle>
